# web-rag

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  main.py  pyproject.toml  requirements.txt
app/: main.py  router.py
app/core/: config.py
app/services/: search_agent.py
src/: preprocess.py  retrieve.py  search.py
